# constractive-nez-haskell

./: README.md
cnez/: LICENSE  cnez.cabal
cnez/app/: Main.hs
cnez/src/: ConstructiveNez.hs  GrammarGenerator.hs  StructureAbstraction.hs  StructureInference.hs  Type.hs  Value.hs
